[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-queue = "0.3.9"
futures = "0.3.29"
reqwest = "0.11.22"
scraper = "0.18.1"
tokio = { version = "1.12.0", features = ["rt-multi-thread","macros"] }
url = "2.5.0"
